--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
   <body>
     <div class="main-container">
       <div class="card card-violet-bg">
-        <header class="card-header">
+        <div class="card-header">
           <img
             src="images/image-daniel.jpg"
             class="card-img-violet-rad"
             alt="Daniel Clifford"
           />
           <div>
-            <h1>Daniel Clifford</h1>
+            <h3>Daniel Clifford</h3>
             <p>Verified Graduate</p>
           </div>
-        </header>
+        </div>
         <p class="card-main-text">
           I received a job offer mid-course, and the subjects I learned were
           current, if not more so, in the company I joined. I honestly feel I
@@ -45,7 +45,7 @@
       </div>
 
       <div class="card card-grayblue-bg">
-        <header class="card-header">
+        <div class="card-header">
           <img
             src="images/image-jonathan.jpg"
             class="card-img-grey-rad"
@@ -55,7 +55,7 @@
             <h3>Jonathan Walters</h3>
             <p>Verified Graduate</p>
           </div>
-        </header>
+        </div>
         <p class="card-main-text">
           The team was very supportive and kept me motivated
         </p>
@@ -67,7 +67,7 @@
       </div>
 
       <div class="card">
-        <header class="card-header">
+        <div class="card-header">
           <img
             src="images/image-jeanette.jpg"
             class="card-img-grey-rad"
@@ -77,7 +77,7 @@
             <h3>Jeanette Harmon</h3>
             <p>Verified Graduate</p>
           </div>
-        </header>
+        </div>
         <p class="card-main-text">
           An overall wonderful and rewarding experience
         </p>
@@ -88,7 +88,7 @@
       </div>
 
       <div class="card card-blackblue-bg">
-        <header class="card-header">
+        <div class="card-header">
           <img
             src="images/image-patrick.jpg"
             class="card-img-violet-rad"
@@ -98,7 +98,7 @@
             <h3>Patrick Abrahms</h3>
             <p>Verified Graduate</p>
           </div>
-        </header>
+        </div>
         <p class="card-main-text">
           Awesome teaching support from TAs who did the bootcamp themselves.
           Getting guidance from them and learning from their experiences was
@@ -115,7 +115,7 @@
       </div>
 
       <div class="card">
-        <header class="card-header">
+        <div class="card-header">
           <img
             src="images/image-kira.jpg"
             class="card-img-grey-rad"
@@ -125,7 +125,7 @@
             <h3>Kira Whittle</h3>
             <p>Verified Graduate</p>
           </div>
-        </header>
+        </div>
         <p class="card-main-text">
           Such a life-changing experience. Highly recommended!
         </p>
